--- a/wish-list/package.json
+++ b/wish-list/package.json
@@ -33,7 +33,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "npx eslint ./src/** --fix"
   },
   "eslintConfig": {
     "extends": [
@@ -57,6 +58,7 @@
     "@typescript-eslint/eslint-plugin": "^5.27.1",
     "@typescript-eslint/parser": "^5.27.1",
     "eslint": "^8.17.0",
+    "eslint-config-google": "^0.14.0",
     "eslint-plugin-react": "^7.30.0"
   }
 }
